src/app.scss
/* ... */
.c-login-submit {
  margin-top: 1em;
}

.c-login-reset {
  font-size: 0.75rem;
  display: inline-block;
  margin-left: 1em;

  &:hover {
    cursor: pointer;
    text-decoration: underline;
  }
}

.admin-page {
  display: grid;
  max-width: 100vw;
  height: 100%;

  grid-template-rows: auto auto 1fr;
  grid-template-areas: "mobile-menu" "title" "content";

  @media screen and (min-width: 1000px) {
    grid-template-columns: 220px 40px min-content 1fr min-content;
    grid-template-rows: 32px 42px 1fr;
    grid-template-areas: "side-nav s1 blank blank blank" "side-nav s2 title placeholder profile" "side-nav s3 content content content";
  }

  &__title {
    display: flex;
    align-items: flex-end;
    margin: 0 1em;
    grid-area: title;

    @media screen and (min-width: 1000px) {
      margin: 0;
    }

    h1 {
      font-size: 1.25rem;
      font-weight: 400;
    }
  }

  &__user {
    display: none;
    align-items: flex-end;
    padding-right: 40px;

    @media only screen and (min-width: 1000px) {
      display: flex;
      grid-area: profile;
    }

    span {
      font-size: 1.25rem;
    }

    .root-switch {
      margin-right: 1em;
      padding-right: 1em;
      border-right: 1px solid var(--line-dark);

      input {
        margin-right: 0;
      }
    }
  }

  .c-content {
    overflow-x: scroll;
    overflow-y: hidden;
    margin-top: 24px;
    padding: 0 1em 1em;
    grid-area: content;

    @media only screen and (min-width: 1000px) {
      margin-right: 40px;
      padding: 0;
    }
  }
}

// Mobile navigation.
.c-mn {
  margin: 1em;
  grid-area: mobile-menu;

  @media screen and (min-width: 1000px) {
    display: none;
  }
}

.c-sidebar {
  position: absolute;
  z-index: 10;
  display: flex;
  flex-direction: column;
  width: 200px;
  height: 100%;
  transition: transform 200ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transform: translateX(-200px);
  background-color: var(--line-light); // #f9f9f9;

  &.is-active {
    transition: transform 250ms cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: translateX(0);
  }

  @media only screen and (min-width: 1000px) {
    position: relative;
    width: auto;
    transform: none;
    grid-area: side-nav;
  }

  &-title {
    font-size: 1.5rem;
    display: inline-block;
    margin: 30px 30px 0;

    img {
      display: block;
    }
  }
}

.c-admin-nav {
  font-size: 1.1rem;
  flex-grow: 2;
  width: 100%;
  padding: 30px;

  li {
    margin-bottom: 0.8em;

    &.last {
      margin-bottom: 1.6em;
    }
  }
}

.c-switch {
  position: relative;

  &:hover {
    cursor: pointer;
  }

  &-current {
    padding: 30px;

    &:hover {
      background-color: var(--line-dark);
    }

    &.is-unique {
      cursor: auto;

      &:hover {
        background-color: transparent;
      }
    }
  }

  &-options {
    position: absolute;
    bottom: calc(2 * 30px + 1.5 * 1rem);
    display: none;
    width: 100%;

    &.is-visible {
      display: block;
    }
  }

  &-option {
    padding: 0.5rem 30px;

    &:hover {
      background-color: var(--line-dark);
    }
  }
}

.c-regList {
  &-ua {
    position: relative;

    &::before,
    &::after {
      display: block;
      position: absolute;
      width: 30px;
      height: 10px;
      content: "";
      right: 0;
      transform: translateY(-50%);
      border: 1px solid #000;
    }

    &::before {
      background-color: #0066cc;
      top: calc(50% - 5px);
      border-bottom: none;
    }

    &::after {
      background-color: #ffcc00;
      top: calc(50% + 5px);
      border-top: none;
    }
  }

  &-shiftButtons {
    margin-right: 1em;
    @media screen and (min-width: 1000px) {
      border-right: 1px solid var(--line-dark);
    }
  }

  &-del {
    position: absolute;
    margin-left: 1em;
    padding: 0.25rem 0.5rem;
    color: #e01e5a;
    border-radius: 30px;

    &::before {
      position: absolute;
      top: -1em;
      left: 2em;
      display: none;
      padding: 0.25rem 0.5rem;
      content: "Kustuta (lõplik)";
      border: 1px solid #dadce0;
      border-radius: var(--box-radius);
      background-color: #fff;
    }

    &:hover {
      border-color: #e01e5a;
      background-color: #ffbdbd;

      &::before {
        display: block;
      }
    }
  }
}

.c-regList-shiftBar {
  display: flex;
  align-items: center;
  margin-bottom: 1em;

  button {
    margin-right: 1em;
  }
}

.c-regList-counters {
  display: flex;

  &__reg,
  &__res {
    display: flex;
  }

  &__reg {
    margin-right: 1.5em;
    border-right: 1px solid #e6e8eb;
  }
}

.c-regList-counter {
  margin-right: 1.5em;
}

.c-regList-table {
  border-collapse: collapse;
  text-align: left;

  &__head {
    position: sticky;
    z-index: 10;
    background-color: #fff;
    inset-block-start: 0;
  }

  tbody {
    border-bottom: 1px solid #000;

    tr:nth-of-type(2n + 1) {
      background-color: var(--dimmed);
    }
  }

  th,
  td {
    padding: 0.75em 1em;
    white-space: nowrap;
  }

  th {
    font-weight: 600;
  }

  input[type="text"] {
    width: 50px;
    padding: 2px 5px;
    border: 0;
    border-bottom: 1px solid var(--primary-text);
    border-radius: 0;
    background-color: transparent;
  }
}
/* ... */

